--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 certifi==2023.5.7
 charset-normalizer==3.2.0
 Django==4.2.3
+django-cors-headers==4.2.0
 django-extensions==3.2.3
 djangorestframework==3.14.0
 idna==3.4
